[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/visual/expression_viewer/ExpressionViewer.gd" type="Script" id=1]
[ext_resource path="res://src/visual/Definitions.gd" type="Script" id=2]
[ext_resource path="res://src/visual/expression_viewer/ExpressionTree.gd" type="Script" id=3]



[node name="ExpressionViewer" type="Control"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 550.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Definitions" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpressionTree" type="Tree" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="expr_item_selected" from="ExpressionTree" to="." method="_on_expr_item_selected"]
[connection signal="item_selected" from="ExpressionTree" to="ExpressionTree" method="_on_item_selected"]
